--- a/index.html
+++ b/index.html
@@ -87,11 +87,21 @@
                         <p class="desc">5 Star Ratings (2k+ Review)</p>
                     </div>
                     <div class="images">
-                        <img src="./assets/img/client-1.svg" alt="logo-1" />
-                        <img src="./assets/img/client-2.svg" alt="logo-2" />
-                        <img src="./assets/img/client-3.svg" alt="logo-3" />
-                        <img src="./assets/img/client-4.svg" alt="logo-4" />
-                        <img src="./assets/img/client-5.svg" alt="logo-5" />
+                        <a href="#!">
+                            <img src="./assets/img/client-1.svg" alt="logo-1" />
+                        </a>
+                        <a href="#!">
+                            <img src="./assets/img/client-2.svg" alt="logo-2" />
+                        </a>
+                        <a href="#!">
+                            <img src="./assets/img/client-3.svg" alt="logo-3" />
+                        </a>
+                        <a href="#!">
+                            <img src="./assets/img/client-4.svg" alt="logo-4" />
+                        </a>
+                        <a href="#!">
+                            <img src="./assets/img/client-5.svg" alt="logo-5" />
+                        </a>
                     </div>
                 </div>
             </div>
