--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     </head>
     <body>
         <main style="height: 6000px">
-            <!-- HEADER -->
-            <header class="header">
+            <header class="fixed-header">
                 <div class="content">
                     <!-- NAVBAR -->
                     <nav class="navbar">
@@ -42,7 +41,11 @@
                             <a href="#!" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
-                    <!-- HERO -->
+                </div>
+            </header>
+            <!-- HERO -->
+            <div class="hero-wrap">
+                <div class="content">
                     <div class="hero">
                         <div class="infor">
                             <p class="sub-title">Welcome to Besnik Agency</p>
@@ -64,7 +67,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
             <!-- CLIENT -->
             <div class="clients">
                 <div class="content">
