--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <!-- NAVBAR -->
                     <nav class="navbar">
                         <!-- Logo -->
-                        <img src="./assets/img/logo.svg" alt="Besnik." />
+                        <a href="/"><img src="./assets/img/logo.svg" alt="Besnik." /><a >
                         <!-- Navigation -->
                         <ul>
                             <li><a href="#!">Home</a></li>
