--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main style="height: 6000px">
+        <main id="home" style="height: 6000px">
             <header class="fixed-header">
                 <div class="content">
                     <!-- NAVBAR -->
@@ -29,11 +29,11 @@
                         <a href="/"><img src="./assets/img/logo.svg" alt="Besnik." /><a >
                         <!-- Navigation -->
                         <ul>
-                            <li><a href="#!">Home</a></li>
-                            <li><a href="#!">Features</a></li>
-                            <li><a href="#!">Service</a></li>
-                            <li><a href="#!">Resource</a></li>
-                            <li><a href="#!">Contact</a></li>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#service">Service</a></li>
+                            <li><a href="#features">Features</a></li>
+                            <li><a href="#resource">Resource</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                         <!-- Action -->
                         <div class="action">
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <!-- GUIDES -->
-            <div class="guides">
+            <div id="service" class="guides">
                 <div class="content">
                     <h2 class="sub-title">How its works?</h2>
                     <p class="desc">
@@ -173,7 +173,7 @@
                 </div>
             </div>
             <!-- FEATURED -->
-            <div class="featured">
+            <div id="features" class="featured">
                 <div class="content">
                     <!-- Header -->
                     <header>
@@ -323,7 +323,7 @@
                 </div>
             </div>
             <!-- STATS -->
-            <div class="stat">
+            <div id="resource" class="stat">
                 <div class="content">
                     <div class="row">
                         <div class="img-block">
@@ -497,7 +497,7 @@
                 </div>
             </div>
             <!-- SUBSCRIPTION -->
-            <div class="subscription">
+            <div id="contact" class="subscription">
                 <div class="content">
                     <div class="body">
                         <div class="infor">
