--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <!-- NAVBAR -->
                     <nav class="navbar">
                         <!-- Logo -->
-                        <a href="/"><img src="./assets/img/logo.svg" alt="Besnik." /><a >
+                        <a href="#home"><img src="./assets/img/logo.svg" alt="Besnik." /><a >
                         <!-- Navigation -->
                         <ul>
                             <li><a href="#home">Home</a></li>
@@ -46,26 +46,24 @@
             <!-- HERO -->
             <div class="hero-wrap">
                 <div class="content">
-                    <div class="hero">
-                        <div class="infor">
-                            <p class="sub-title">Welcome to Besnik Agency</p>
-                            <h1 class="title">
-                                Discover a place you'll love to live.
-                            </h1>
-                            <p class="description">
-                                Get the best real estate deals first, before
-                                they hit the mass market! HOT FORECLOSURE DEALS
-                                with one simple search
-                            </p>
-                            <!-- CTA: Call to action -->
-                            <a href="#!" class="btn hero-cta">More About Us</a>
-                        </div>
-                        <img
-                            src="./assets/img/house illustration.svg"
-                            alt="Discover a place you'll love to live"
-                            class="hero-img"
-                        />
+                    <div class="infor">
+                        <p class="sub-title">Welcome to Besnik Agency</p>
+                        <h1 class="title">
+                            Discover a place you'll love to live.
+                        </h1>
+                        <p class="description">
+                            Get the best real estate deals first, before
+                            they hit the mass market! HOT FORECLOSURE DEALS
+                            with one simple search
+                        </p>
+                        <!-- CTA: Call to action -->
+                        <a href="#!" class="btn hero-cta">More About Us</a>
                     </div>
+                    <img
+                        src="./assets/img/house illustration.svg"
+                        alt="Discover a place you'll love to live"
+                        class="hero-img"
+                    />
                 </div>
             </div>
             <!-- CLIENT -->
